# satellite

./: .gitignore  Cargo.toml  LICENSE  README.md  satellite_specs.md
bench_data/: problem_000.json  problem_001.json  problem_002.json  problem_003.json  problem_004.json  problem_005.json  problem_006.json  problem_007.json  problem_008.json  problem_009.json
cpp_src/: CMakeLists.txt  vcpkg.json
cpp_src/gpu_worker/: CMakeLists.txt
cpp_src/gpu_worker/include/: gpu_worker.h  types.h
cpp_src/gpu_worker/src/: gpu_worker.cpp
cpp_src/gpu_worker/src/common/: gpu_compat.h  types.h
cpp_src/gpu_worker/src/cuda/: bcp_kernel.cu  mpmc_gpu.cu  types.h
cpp_src/gpu_worker/src/hip/: bcp_kernel.hip  mpmc_gpu.hip
cpp_src/gpu_worker/tests/: test_gpu_worker.cpp
cpp_src/include/: satellite.hpp
crates/satellite-base/: Cargo.toml  README.md
crates/satellite-base/src/: error.rs  ffi.rs  lib.rs  traits.rs  utils.rs
crates/satellite-base/src/types/: batch.rs  bitvec.rs  bool_var.rs  float_var.rs  int_var.rs  mod.rs  vec_var.rs
crates/satellite-branch/: Cargo.toml  README.md
crates/satellite-branch/src/: branch.rs  lib.rs  lifecycle.rs  refcount.rs
crates/satellite-cdcl/: Cargo.toml  README.md
crates/satellite-cdcl/src/: bcp.rs  clause_db.rs  conflict.rs  decision.rs  heuristics.rs  lib.rs  solver.rs
crates/satellite-cdcl/tests/: comprehensive_tests.rs
crates/satellite-cli/: Cargo.toml  README.md
crates/satellite-cli/src/: config.rs  main.rs
crates/satellite-cli/src/commands/: batch.rs  convert.rs  install.rs  mod.rs  profile.rs  solve.rs
crates/satellite-cpp-frontend/: Cargo.toml
crates/satellite-cpp-frontend/src/: lib.rs
crates/satellite-daemon/: Cargo.toml  README.md
crates/satellite-daemon/src/: checkpoint.rs  main.rs  scheduler.rs  server.rs
crates/satellite-format/: Cargo.toml  README.md
crates/satellite-format/src/: advanced_cnf.rs  canonical.rs  dimacs.rs  lib.rs  parser.rs  sat_parser.rs  snapshot.rs
crates/satellite-gpu/: Cargo.toml  README.md
crates/satellite-gpu/benches/: bcp_bench.rs
crates/satellite-gpu/src/: abi_op.rs  ffi.rs  lib.rs  status.rs  worker.rs
crates/satellite-gpu/tests/: gpu_tests.rs
crates/satellite-ide/: Cargo.toml  package-lock.json  tauri.conf.json
crates/satellite-ide/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/satellite-ide/frontend/src/: App.css  App.tsx  plugin_api.ts
crates/satellite-ide/frontend/src/components/: ActivityBar.css  ActivityBar.tsx  FileExplorer.css  FileExplorer.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  TerminalPanel.css  TerminalPanel.tsx  Toolbar.css  Toolbar.tsx  index.ts
crates/satellite-ide/src/: commands.rs  lib.rs  lsp.rs  main.rs  plugin_runtime.rs
crates/satellite-jit/: Cargo.toml  README.md
crates/satellite-jit/src/: analysis.rs  cache.rs  compiler.rs  ir.rs  lib.rs  sandbox.rs  truth_table.rs
crates/satellite-kit/: Cargo.toml  README.md
crates/satellite-kit/src/: constraint.rs  context_manager.rs  frontend_abi.rs  frontend_manager.rs  gadgets.rs  lib.rs  result.rs  solver.rs
crates/satellite-kit/tests/: solver_integration.rs
crates/satellite-lockfree/: Cargo.toml  README.md
crates/satellite-lockfree/benches/: mpmc_bench.rs
crates/satellite-lockfree/src/: lib.rs  mpmc.rs  mvcc.rs  skiplist.rs  vector.rs
crates/satellite-protocol/: Cargo.toml  README.md
crates/satellite-protocol/src/: codec.rs  lib.rs  messages.rs
crates/satellite-python-frontend/: Cargo.toml
crates/satellite-python-frontend/src/: lib.rs
crates/satellite-rust-frontend/: Cargo.toml
crates/satellite-rust-frontend/src/: lib.rs
crates/satellite-worker/: Cargo.toml  README.md
crates/satellite-worker/src/: gpu_bridge.rs  job.rs  lib.rs  pool.rs  priority.rs
docs/: README.md  api_guide.md  architecture.md
docs/advanced/: assumptions.md  gadgets.md  parallel.md  unsat-core.md
docs/api/: core-api.md  ffi-api.md  python-api.md
docs/architecture/: cdcl.md  gpu.md  overview.md  types.md
docs/user-guide/: cli-reference.md  getting-started.md  python-tutorial.md
examples/: benchmark.py  pigeonhole.cnf  run_examples.bat  simple_3sat.json  test_canonical.jsonc
examples/bench_data/: problem_000.json  problem_001.json  problem_002.json  problem_003.json  problem_004.json  problem_005.json  problem_006.json  problem_007.json  problem_008.json  problem_009.json
examples/results/: pigeonhole.json  simple_3sat.json
examples/single_test/: test_canonical.jsonc
examples/test_out/pigeonhole_solutions/: summary.json
examples/test_out/simple_3sat_solutions/: solution_0.json  summary.json
py_src/satellite_jupyter/: pyproject.toml
py_src/satellite_jupyter/satellite_jupyter/: __init__.py  install.py  kernel.py  magic.py
py_src/satellite_lab/: Cargo.toml  README.md  pyproject.toml
py_src/satellite_lab/python/satellite_lab/: __init__.py
py_src/satellite_lab/src/: lib.rs  solver.rs  types.rs
py_src/satellite_lab/tests/: test_lab.py
satellite-vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
satellite-vscode/src/: extension.ts
satellite-vscode/src/solver/: solverClient.ts
satellite-vscode/syntaxes/: dimacs.tmLanguage.json  satellite.tmLanguage.json
tmp_results/problem_000_solutions/: solution_0.json  summary.json
tmp_results/problem_001_solutions/: solution_0.json  summary.json
tmp_results/problem_002_solutions/: solution_0.json  summary.json
tmp_results/problem_003_solutions/: solution_0.json  summary.json
tmp_results/problem_004_solutions/: solution_0.json  summary.json
tmp_results/problem_005_solutions/: solution_0.json  summary.json
tmp_results/problem_006_solutions/: solution_0.json  summary.json
tmp_results/problem_007_solutions/: solution_0.json  summary.json
tmp_results/problem_008_solutions/: solution_0.json  summary.json
tmp_results/problem_009_solutions/: solution_0.json  summary.json
tools/: llvm-config-mock.rs  setup_jit.ps1
