[package]
name = "satellite-branch"
description = "Git-style branch model for Satellite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
satellite-base = { workspace = true }
satellite-lockfree = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
