[package]
name = "satellite-cli"
description = "Command-line interface for Satellite SAT solver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "satellite"
path = "src/main.rs"

[dependencies]
satellite-kit = { workspace = true }
satellite-format = { workspace = true }
satellite-cdcl = { workspace = true }
satellite-protocol = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.3"
rayon = "1.7"
serde = { workspace = true, features = ["derive"] }
satellite-base = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
