[package]
name = "satellite-gpu"
version = "0.1.0"
edition = "2021"
description = "GPU acceleration bindings for Satellite solver"
authors = ["Satellite Team"]
license = "MIT"

[dependencies]
satellite-base = { path = "../satellite-base" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[build-dependencies]
cc = "1.0"

[features]
default = []
cuda = []
hip = []

[[bench]]
name = "bcp_bench"
harness = false
