[package]
name = "satellite-protocol"
description = "Communication protocol for Satellite CLI/Daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
satellite-base = { workspace = true }
satellite-format = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
