[package]
name = "satellite-python-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
satellite-base = { workspace = true }
pyo3 = { version = "0.23", features = ["auto-initialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
libc = "0.2"
once_cell = "1.21.3"

[lints]
workspace = true
