[package]
name = "satellite-rust-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
satellite-base = { workspace = true }
libc = "0.2"

[lints]
workspace = true
