[package]
name = "satellite-worker"
description = "CPU worker pool and GPU bridge for Satellite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
satellite-base = { workspace = true }
satellite-lockfree = { workspace = true }
satellite-branch = { workspace = true }
libloading = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
